flpsed ChangeLog
=================

flpsed-0.3.2
 - Implement zooming (thanks to Jochen Eisinger for the suggestion).

flpsed-0.3.1
 - Fix redraw problem after scrolling.
 - Allow moving of text with arrow keys for better text positioning.
 - Tab key now cycles through text fields on current page.
 - Various bug fixes.

flpsed-0.3.0
 - Add support for tags (thanks to Reimar Bauer for his thoughts on this).
 - Add batch processing mode.
 - Load PostScript file given on the command line.
 - Reduced flickering.

flpsed-0.2.1
 - Fix segfault when reloading documents.

flpsed-0.2
 - Change internal format to allow for more compatible PostScript code.
 - Improve PostScript output.
 - Make flpsed work with various page sizes.
 - Major code restructuring.
 - Allow pasting of text.
 - Fix segmentation fault when saving large documents.
 - Add support for '\' character.

flpsed-0.1
 - Initial version.